# PdfPresenter

./: .gitignore  =1.24.0  MIGRATION.md  PROJECT_STRUCTURE.md  QML_MIGRATION_SUMMARY.md  README.md  debian-install.sh  editor_window.py  file_browser.py  main.py  notes.py  pdf_backend.py  pdf_view.py  pdfpresenter.py  presentation_window.py  projector_view.py  pyproject.toml  slide_organizer.py  timer.py
qml/: Main.qml  qmldir
qml/components/: NavButton.qml  SlideOrganizer.qml  SlideThumbnail.qml
qml/views/: PresentationView.qml
